<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/meal_track_radio_group" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/meal_track_ll_shape"
        android:checkedButton="@+id/all"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:padding="5dp"
            android:textSize="@dimen/txt_size_meal_tack_table"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@drawable/meal_track_text_color_selector"
            android:text="@string/meal_track_filter_all"
            android:background="@drawable/meal_track_check_all_selector" />

        <RadioButton
            android:id="@+id/recent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:textSize="@dimen/txt_size_meal_tack_table"
            android:padding="5dp"
            android:layout_weight="1"
            android:textColor="@drawable/meal_track_text_color_selector"
            android:gravity="center"
            android:text="@string/meal_track_filter_recent"
            android:background="@drawable/meal_track_check_recent_selector" />

        <RadioButton
            android:id="@+id/frequent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:textSize="@dimen/txt_size_meal_tack_table"
            android:padding="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@drawable/meal_track_text_color_selector"
            android:text="@string/meal_track_filter_frequent"
            android:background="@drawable/meal_track_check_recent_selector" />

        <RadioButton
            android:id="@+id/favorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:textSize="@dimen/txt_size_meal_tack_table"
            android:padding="5dp"
            android:gravity="center"
            android:textColor="@drawable/meal_track_text_color_selector"
            android:layout_weight="1"
            android:text="@string/meal_track_filter_favorites"
            android:background="@drawable/meal_track_check_favorites_selector" />
    </RadioGroup>
</LinearLayout>
